# FastApi_Lib_edu

./: LICENSE  README.md  pyproject.toml
src/: __init__.py  config.py
src/books/: models.py  routes.py  schemas.py  service.py
src/db/: main.py
